Making major perf changes to make things faster and help low power devices!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,7 @@
         "crypo",
         "Damerell",
         "dbus",
+        "debugprofiler",
         "decompressor",
         "decompressors",
         "deps",
@@ -82,6 +83,7 @@
         "hostid",
         "hostnames",
         "Hotend",
+        "httpsessions",
         "httpx",
         "INET",
         "inited",
@@ -108,6 +110,7 @@
         "localip",
         "Mailsail",
         "mainsailconfighandler",
+        "maxdepth",
         "mbps",
         "mdns",
         "microreads",
@@ -127,6 +130,7 @@
         "msgcount",
         "msys",
         "multicam",
+        "muppy",
         "myprinter",
         "nbsp",
         "networksearch",
@@ -165,6 +169,7 @@
         "oprint",
         "ostype",
         "ostypeidentifier",
+        "overhere",
         "paho",
         "peasy",
         "permissioned",
@@ -184,7 +189,9 @@
         "Pursa",
         "pushall",
         "pushd",
+        "pyinstrument",
         "Pylint",
+        "pympler",
         "pypi",
         "pythoncompat",
         "pythonhosted",
@@ -194,6 +201,7 @@
         "rdataclass",
         "rdclass",
         "realpath",
+        "refbrowser",
         "referer",
         "releaseinfo",
         "repeattimer",
