--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -50,7 +50,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/amd64,linux/arm/v7,linux/arm64
+          platforms: linux/amd64,linux/386,linux/arm/v6,linux/arm/v7,linux/arm64
           file: ./Dockerfile
           push: false
           tags: ${{ steps.meta.outputs.tags }}
