Adding a bed cooldown notification!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,8 @@
         "bambustatetranslater",
         "bambuwebcamhelper",
         "bblp",
+        "bedcooldowncomplete",
+        "bedcooldownwatcher",
         "bootstraper",
         "boundarydonotcross",
         "brotli",
@@ -35,6 +37,7 @@
         "companionconfigfile",
         "coms",
         "continuousprint",
+        "Cooldown",
         "Creality",
         "Creality's",
         "creds",
