Upgrading to our new websocket lib that have major perf benfits!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -160,6 +160,7 @@
         "octosessionimpl",
         "octostream",
         "octostreammsgbuilder",
+        "octowebsocket",
         "octowebstream",
         "octowebstreamhttphelper",
         "octowebstreamhttphelperimpl",
@@ -215,6 +216,7 @@
         "rtsps",
         "sdcard",
         "serverauth",
+        "setdefaulttimeout",
         "shotty",
         "skipsudoactions",
         "smartpause",
