--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@
 #
 # For comments on package lock versions, see the comments in the setup.py file.
 #
-websocket_client>=1.6.0,<1.7.99
+octowebsocket_client==1.8.2
 requests>=2.31.0
 octoflatbuffers==24.3.27
 pillow
