Reverting out the Bambu Cloud install from the docker readme.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,28 @@
+version: '2'
 services:
   octoeverywhere-bambu-connect:
     image: octoeverywhere/octoeverywhere:latest
     environment:
+        # https://octoeverywhere.com/s/access-code
+      - ACCESS_CODE=XXXXXXXX
         # https://octoeverywhere.com/s/bambu-sn
       - SERIAL_NUMBER=XXXXXXXXXXXXXXX
         # Find using the printer's display or use https://octoeverywhere.com/s/bambu-ip
       - PRINTER_IP=XXX.XXX.XXX.XXX
-
-      # ~~~ If connecting with Bambu Cloud Mode ~~~
-      # https://octoeverywhere.com/s/bambu-setup
-      - BAMBU_CLOUD_ACCOUNT_EMAIL=XXXXXXXX
-      - BAMBU_CLOUD_ACCOUNT_PASSWORD=XXXXXXXX
-      #- BAMBU_CLOUD_REGION=china # Optional, use if your Bambu account is in the China region
-
-      # ~~~ OR If connecting with LAN Only Mode ~~~
-      # https://octoeverywhere.com/s/access-code
-      # - ACCESS_CODE=XXXXXXXX
-      # - LAN_ONLY_MODE=TRUE
     volumes:
-      # Specify a path mapping for the required persistent storage
       # This can also be an absolue path, e.g. /var/octoeverywhere/plugin/data or /c/users/name/plugin/data
       - ./data:/data
 
-  # Add as many printers as you want! Just make the name `octoeverywhere-bambu-connect` unique!
+  # Add as many printers as you want!
   # octoeverywhere-bambu-connect-2:
   #   image: octoeverywhere/octoeverywhere:latest
   #   environment:
+  #       # https://octoeverywhere.com/s/access-code
+  #     - ACCESS_CODE=XXXXXXXX
   #       # https://octoeverywhere.com/s/bambu-sn
   #     - SERIAL_NUMBER=XXXXXXXXXXXXXXX
   #       # Find using the printer's display or use https://octoeverywhere.com/s/bambu-ip
   #     - PRINTER_IP=XXX.XXX.XXX.XXX
-
-  #     # ~~~ If connecting with Bambu Cloud Mode ~~~
-  #     # https://octoeverywhere.com/s/bambu-setup
-  #     - BAMBU_CLOUD_ACCOUNT_EMAIL=XXXXXXXX
-  #     - BAMBU_CLOUD_ACCOUNT_PASSWORD=XXXXXXXX
-  #     #- BAMBU_CLOUD_REGION=china # Optional, use if your Bambu account is in the China region
-
-  #     # ~~~ OR If connecting with LAN Only Mode ~~~
-  #     # https://octoeverywhere.com/s/access-code
-  #     # - ACCESS_CODE=XXXXXXXX
-  #     # - LAN_ONLY_MODE=TRUE
   #   volumes:
   #     # Specify a path mapping for the required persistent storage
   #     - ./data:/data
