Added tzdata to allow time zone to be set properly. (#93)
* Update Dockerfile

Added entries to install TZ data package

* Added value for timezone

Added entry to set timezone to proper value

* Correct typo

Corrected type in sample TZ entry.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       - SERIAL_NUMBER=XXXXXXXXXXXXXXX
         # Find using the printer's display or use https://octoeverywhere.com/s/bambu-ip
       - PRINTER_IP=XXX.XXX.XXX.XXX
+        # Set timezone to proper timezone for logs using standard timezones:
+        # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
+      - TZ=America/New_York
 
       # Optionally: If you want to connect via the Bambu Cloud, you can specify the following environment variables.
       # By default the plugin will use the local connection mode, which is preferred.
