--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@
 # OctoPrint uses the package list in the setup.py file.
 #
 # BUT, for the most part, the packages should be exactly synced between these sources.
-# The only excpetion would be any packages moonraker or OctoPrint depend upon, that the other doesn't.
+# The only exception would be any packages moonraker or OctoPrint depend upon, that the other doesn't.
 #
 # For comments on package lock versions, see the comments in the setup.py file.
 #
@@ -16,7 +16,7 @@ rsa>=4.9
 dnspython>=2.3.0
 httpx>=0.24.1,<0.26.0
 urllib3>=1.26.15,<2.0.0
-sentry-sdk>=1.19.1,<2
+#sentry-sdk>=1.19.1,<2
 #zstandard>=0.22.0,<0.23.0
 
 # The following are required only for Moonraker
