Welcome to 4.0 - Adding Support For Elegoo OS printers like the Elegoo Centauri Carbon!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,7 @@
         "comms",
         "companionconfigfile",
         "coms",
+        "configparser",
         "continuousprint",
         "Cooldown",
         "Creality",
@@ -57,6 +58,16 @@
         "didnt",
         "dnspython",
         "dnstest",
+        "elegoo",
+        "elegooclient",
+        "elegoocommandhandler",
+        "elegoohost",
+        "elegoomodels",
+        "elegoorelaywebcamstreamdetector",
+        "elegoorelaywebcamurldetector",
+        "elegoostatetranslater",
+        "elegoowebcamhelper",
+        "elegoowebsocketmux",
         "esac",
         "faststart",
         "Fernet",
@@ -95,6 +106,7 @@
         "ipcam",
         "JFIF",
         "jmpeg",
+        "jmpegs",
         "journalctl",
         "JRPC",
         "jsonify",
@@ -112,6 +124,8 @@
         "localfs",
         "localip",
         "Mailsail",
+        "mainbaord",
+        "Mainboard",
         "mainsailconfighandler",
         "maxdepth",
         "mbps",
@@ -195,6 +209,7 @@
         "pushd",
         "pyinstrument",
         "Pylint",
+        "pylintrc",
         "pympler",
         "pypi",
         "pythoncompat",
@@ -223,14 +238,17 @@
         "snapshotresizeparams",
         "Softwareupdate",
         "somename",
+        "sonicpad",
         "sooooooo",
         "Spammy",
         "Spoolman",
         "sslopt",
+        "standin",
         "Starbound",
         "starport",
         "struct",
         "subcode",
+        "substate",
         "systemconfigmanager",
         "telemetryaccumulator",
         "thirdlayerdone",
@@ -250,6 +268,7 @@
         "Unobfuscate",
         "updatemanager",
         "urandom",
+        "urllib",
         "userdata",
         "userinteractionneeded",
         "venv",
@@ -263,6 +282,7 @@
         "webcamsettingitem",
         "webcamstream",
         "webcamstreaminstance",
+        "webcamutil",
         "webfont",
         "webfonts",
         "webrequestresponsehandler",
