--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -34,6 +34,7 @@ jobs:
         pylint ./octoeverywhere/
         pylint ./octoprint_octoeverywhere/
         pylint ./moonraker_octoeverywhere/
+        pylint ./elegoo_octoeverywhere/
         pylint ./bambu_octoeverywhere/
         pylint ./linux_host/
         pylint ./py_installer/
