--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,11 @@ octowebsocket_client==1.8.3
 requests>=2.31.0
 octoflatbuffers==24.3.27
 pillow
-certifi>=2023.11.17
+certifi>=2025.1.31
 rsa>=4.9
 dnspython>=2.3.0
-httpx>=0.24.1,<0.26.0
-urllib3>=1.26.15,<2.0.0
+httpx>=0.24.1
+urllib3>=2.0.0
 #sentry-sdk>=1.19.1,<2
 #zstandard>=0.22.0,<0.23.0
 
