--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -36,7 +36,7 @@
             ]
         },
         {
-            "name": "Elegoo Connect",
+            "name": "Elegoo Connect - Primary",
             "type": "debugpy",
             "request": "launch",
             "module": "elegoo_octoeverywhere",
