--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,86 +3,112 @@ services:
   octoeverywhere-connect:
     image: octoeverywhere/octoeverywhere:latest
     environment:
-        # Required: The version of OctoEverywhere Companion you want use.
+        # Required: The mode of OctoEverywhere Companion you want use.
         #   - bambu:   Bambu Connect - for Bambu Lab 3D printers such as the Bambu Lab A1, P1, and X1 series.
         #   - elegoo:  Elegoo Connect - for Elegoo OS 3D printers such as the Elegoo Centauri & Elegoo Centauri Carbon.
         #   - klipper: Use this for Klipper / Moonraker based printers.
-      - COMPANION_MODE=bambu
+        #
+        # Set this to the mode you want to use, and then uncomment the required settings for the mode bellow.
+        - COMPANION_MODE=bambu
 
         #
         # Required for Bambu Connect
         #
-        # https://octoeverywhere.com/s/access-code
-      - ACCESS_CODE=XXXXXXXX
-        # https://octoeverywhere.com/s/bambu-sn
-      - SERIAL_NUMBER=XXXXXXXXXXXXXXX
-        # Find using the printer's display or use https://octoeverywhere.com/s/bambu-ip
-      - PRINTER_IP=XXX.XXX.XXX.XXX
+        #  https://octoeverywhere.com/s/access-code
+        #- ACCESS_CODE=5285c831
+        #
+        #  https://octoeverywhere.com/s/bambu-sn
+        #- SERIAL_NUMBER=00M09C411200608
+        #
+        #  Find using the printer's display or use https://octoeverywhere.com/s/bambu-ip
+        #- PRINTER_IP=10.0.0.23
+
 
         #
         # Required for Elegoo Connect
         #
-        # Find using the printer's display or use https://octoeverywhere.com/s/elegoo-ip
-      - ELEGOO_PRINTER_IP=XXX.XXX.XXX.XXX
+        #  Find using the printer's display or use https://octoeverywhere.com/s/elegoo-ip
+        #- PRINTER_IP=XXX.XXX.XXX.XXX
+
 
         #
         # Required For Klipper / Moonraker
         #
-        # TODO - The OctoEverywhere Klipper Docker container doesn't work yet, but it will soon!
-      #- KLIPPER_PRINTER_IP=XXX.XXX.XXX.XXX
-      #- KLIPPER_PRINTER_PORT=7125
-      #- KLIPPER_WEBSERVER_PORT=80
+        #  Required - The IP address of the Klipper/Moonraker/Webserver/Printer
+        #- PRINTER_IP=XXX.XXX.XXX.XXX
+        #
+        #  Optional - The port of Moonraker. This defaults to 7125 if not set.
+        #- MOONRAKER_PORT=7125
+        #
+        #  Optional - The port of frontend webserver. This defaults to 80 if not set.
+        #- WEBSERVER_PORT=80
 
         #
-        # Optional Settings
+        # Optional Settings For All Modes
         #
         # Set timezone to proper timezone for logs using standard timezones:
         # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
-      - TZ=America/New_York
+        - TZ=America/New_York
 
     volumes:
       # This can also be an absolute path, e.g. /var/octoeverywhere/plugin/data or /c/users/name/plugin/data
       - ./data:/data
 
-  # Add as many printers as you want!
+
+
+
+  #
+  # Add as many printers and printer types as you want!
+  #
   # octoeverywhere-connect-2:
   #   image: octoeverywhere/octoeverywhere:latest
   #   environment:
-  #       # Required: The version of OctoEverywhere Companion you want use.
+  #       # Required: The mode of OctoEverywhere Companion you want use.
   #       #   - bambu:   Bambu Connect - for Bambu Lab 3D printers such as the Bambu Lab A1, P1, and X1 series.
   #       #   - elegoo:  Elegoo Connect - for Elegoo OS 3D printers such as the Elegoo Centauri & Elegoo Centauri Carbon.
   #       #   - klipper: Use this for Klipper / Moonraker based printers.
-  #     - COMPANION_MODE=bambu
+  #       #
+  #       # Set this to the mode you want to use, and then uncomment the required settings for the mode bellow.
+  #       - COMPANION_MODE=bambu
 
   #       #
   #       # Required for Bambu Connect
   #       #
-  #       # https://octoeverywhere.com/s/access-code
-  #     - ACCESS_CODE=XXXXXXXX
-  #       # https://octoeverywhere.com/s/bambu-sn
-  #     - SERIAL_NUMBER=XXXXXXXXXXXXXXX
-  #       # Find using the printer's display or use https://octoeverywhere.com/s/bambu-ip
-  #     - PRINTER_IP=XXX.XXX.XXX.XXX
+  #       #  https://octoeverywhere.com/s/access-code
+  #       #- ACCESS_CODE=5285c831
+  #       #
+  #       #  https://octoeverywhere.com/s/bambu-sn
+  #       #- SERIAL_NUMBER=00M09C411200608
+  #       #
+  #       #  Find using the printer's display or use https://octoeverywhere.com/s/bambu-ip
+  #       #- PRINTER_IP=10.0.0.23
+
 
   #       #
   #       # Required for Elegoo Connect
   #       #
-  #       # Find using the printer's display or use https://octoeverywhere.com/s/elegoo-ip
-  #     - ELEGOO_PRINTER_IP=XXX.XXX.XXX.XXX
+  #       #  Find using the printer's display or use https://octoeverywhere.com/s/elegoo-ip
+  #       #- PRINTER_IP=XXX.XXX.XXX.XXX
+
 
   #       #
   #       # Required For Klipper / Moonraker
   #       #
-  #     - KLIPPER_PRINTER_IP=XXX.XXX.XXX.XXX
-  #     - KLIPPER_PRINTER_PORT=7125
-  #     - KLIPPER_WEBSERVER_PORT=80
+  #       #  Required - The IP address of the Klipper/Moonraker/Webserver/Printer
+  #       #- PRINTER_IP=XXX.XXX.XXX.XXX
+  #       #
+  #       #  Optional - The port of Moonraker. This defaults to 7125 if not set.
+  #       #- MOONRAKER_PORT=7125
+  #       #
+  #       #  Optional - The port of frontend webserver. This defaults to 80 if not set.
+  #       #- WEBSERVER_PORT=80
 
   #       #
-  #       # Optional Settings
+  #       # Optional Settings For All Modes
   #       #
   #       # Set timezone to proper timezone for logs using standard timezones:
   #       # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
-  #     - TZ=America/New_York
+  #       - TZ=America/New_York
 
   #   volumes:
   #     # This can also be an absolute path, e.g. /var/octoeverywhere/plugin/data or /c/users/name/plugin/data
