More bug fixes and improvements for Elegoo Connect

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,7 @@
         "elegoo",
         "elegooclient",
         "elegoocommandhandler",
+        "elegoofilemanager",
         "elegoohost",
         "elegoomodels",
         "elegoorelaywebcamstreamdetector",
