--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -100,6 +100,7 @@
         "Hotend",
         "httpsessions",
         "httpx",
+        "iconfont",
         "INET",
         "inited",
         "ints",
@@ -231,6 +232,7 @@
         "RTSP",
         "rtsps",
         "sdcard",
+        "sdcp",
         "serverauth",
         "setdefaulttimeout",
         "shotty",
@@ -300,9 +302,6 @@
         "zstandard",
         "zstandarddictionary",
         "zvalue"
-    ],
-    "cSpell.enableFiletypes": [
-        "shellscript"
     ],
     "pylint.showNotification": true,
     "pylint.lintOnChange": true,
