Adding QR code logic to the installer.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -121,6 +121,7 @@
         "Klippy",
         "levelname",
         "levelno",
+        "linkhelper",
         "Liveview",
         "localauth",
         "localfs",
@@ -217,6 +218,7 @@
         "pythoncompat",
         "pythonhosted",
         "PYTHONPATH",
+        "qrcode",
         "quickcam",
         "ratos",
         "rdataclass",
