--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,9 @@ urllib3>=2.0.0
 #sentry-sdk>=1.19.1,<2
 #zstandard>=0.22.0,<0.23.0
 
+# Required only for linux host based plugins, used by the installer and the plugin for setup.
+qrcode<=8.0.0
+
 # The following are required only for Moonraker
 configparser
 
