Adding logic to allow the plugin to attempt to get a oneshot token from moonraker.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -185,6 +185,7 @@
         "octowebstreamwshelper",
         "oeapi",
         "oestreamboundary",
+        "oneshot",
         "openwrt",
         "opkg",
         "oprint",
