Adding the MQTT proxy and fixing a lot of bugs!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "ABNF",
         "accesscontrol",
         "acked",
+        "acks",
         "Analysing",
         "apicommandhandler",
         "appi",
@@ -150,6 +151,7 @@
         "mountinfo",
         "movflags",
         "mqtt",
+        "mqttwebsocketproxy",
         "msgcount",
         "msys",
         "multicam",
@@ -281,6 +283,7 @@
         "unauth",
         "unauthed",
         "Unobfuscate",
+        "unsubscription",
         "updatemanager",
         "urandom",
         "urllib",
