--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -125,6 +125,7 @@
         "Klippy",
         "levelname",
         "levelno",
+        "libjpeg",
         "linkhelper",
         "Liveview",
         "localauth",
