Adding a simple local web api to report the plugin's state.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -131,6 +131,7 @@
         "localauth",
         "localfs",
         "localip",
+        "localwebapi",
         "Mailsail",
         "mainbaord",
         "Mainboard",
