Adding logic to delay connection lost notifications for elegoo.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,6 +51,7 @@
         "debugprofiler",
         "decompressor",
         "decompressors",
+        "delayedcallback",
         "deps",
         "devel",
         "deviceid",
