Adding unique error codes for Bambu.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "bambuclient",
         "bambucloud",
         "bambucommandhandler",
+        "bambuerrors",
         "bambuhost",
         "bambulab",
         "bambumodels",
