Fixing more minor bugs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -91,6 +91,7 @@
         "fsensor",
         "fstring",
         "FULLDICT",
+        "gaierror",
         "gcode",
         "geteuid",
         "getpwnam",
