--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -205,6 +205,7 @@
         "paho",
         "peasy",
         "permissioned",
+        "pingpong",
         "pkcs",
         "PKGLIST",
         "platformcompat",
