--- a/requirements-sonicpad.txt
+++ b/requirements-sonicpad.txt
@@ -12,8 +12,11 @@ rsa>=4.9
 dnspython>=2.3.0
 httpx>=0.24.1
 urllib3>=1.26.15,<2.0.0
-#sentry-sdk>=1.19.1,<2
+sentry-sdk>=2.20.0,<3
 #zstandard>=0.22.0,<0.23.0
+
+# Required only for linux host based plugins, used by the installer and the plugin for setup.
+qrcode<=8.0.0
 
 # The following are required only for Moonraker
 configparser
