Adding pybind11 to our project deps to try to fix an OctoPi issue.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "apicommandhandler",
         "appi",
         "asvc",
+        "asyncio",
         "authed",
         "autobedlevel",
         "backoff",
@@ -223,6 +224,7 @@
         "Pursa",
         "pushall",
         "pushd",
+        "pybind",
         "pycache",
         "pyinstrument",
         "Pylint",
@@ -254,6 +256,7 @@
         "sdcp",
         "serverauth",
         "setdefaulttimeout",
+        "setuptools",
         "shotty",
         "skipsudoactions",
         "smartpause",
