Adding support for the Snapmaker U1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -106,6 +106,7 @@
         "Hotend",
         "httpresult",
         "httpsessions",
+        "httpstreamaccumulationreader",
         "httpx",
         "iconfont",
         "INET",
@@ -210,6 +211,7 @@
         "pkcs",
         "PKGLIST",
         "platformcompat",
+        "popleft",
         "precompute",
         "printerevent",
         "printerid",
@@ -260,6 +262,7 @@
         "shotty",
         "skipsudoactions",
         "smartpause",
+        "Snapmaker",
         "snapshotresizeparams",
         "Softwareupdate",
         "somename",
