More lint fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -91,6 +91,7 @@
         "frontendsetup",
         "fsensor",
         "fstring",
+        "fullbuffercompression",
         "FULLDICT",
         "gaierror",
         "gcode",
