--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -145,6 +145,7 @@
         "maxdepth",
         "mbps",
         "mdns",
+        "memorydebug",
         "microreads",
         "mjpeg",
         "mjpegstreamer",
@@ -170,6 +171,7 @@
         "noatuoselect",
         "notificationshandler",
         "ntpsec",
+        "objgraph",
         "Ocoto",
         "ocotomessage",
         "Octo",
