Adding moonraker support for the lights APIs and updating them to support multiple lights.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "acks",
         "Analysing",
         "apicommandhandler",
+        "appendleft",
         "appi",
         "asvc",
         "asyncio",
@@ -30,7 +31,9 @@
         "brotli",
         "Buildroot",
         "buildx",
+        "caselight",
         "certifi",
+        "chamberlight",
         "checkin",
         "classicwebcam",
         "cleaningnozzle",
@@ -62,6 +65,7 @@
         "didnt",
         "dnspython",
         "dnstest",
+        "dotstar",
         "elegoo",
         "elegooclient",
         "elegoocommandhandler",
@@ -129,9 +133,11 @@
         "KIAUH",
         "Klipper",
         "Klippy",
+        "ledlight",
         "levelname",
         "levelno",
         "libjpeg",
+        "lightmanager",
         "linkhelper",
         "Liveview",
         "localauth",
@@ -167,6 +173,7 @@
         "muppy",
         "myprinter",
         "nbsp",
+        "neopixel",
         "networksearch",
         "noatuoselect",
         "notificationshandler",
