--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -317,6 +317,7 @@
         "virtualenv",
         "wallclock",
         "warmingup",
+        "weakcallback",
         "webassets",
         "webcamhelper",
         "webcamsettingitem",
