Adding a few more websocket optimizations.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "authed",
         "autobedlevel",
         "backoff",
+        "Backpressure",
         "Bambu",
         "bambuclient",
         "bambucloud",
@@ -119,6 +120,7 @@
         "ints",
         "ioreg",
         "ipcam",
+        "IPPROTO",
         "JFIF",
         "jmpeg",
         "jmpegs",
@@ -176,6 +178,7 @@
         "neopixel",
         "networksearch",
         "noatuoselect",
+        "NODELAY",
         "notificationshandler",
         "ntpsec",
         "objgraph",
@@ -252,6 +255,7 @@
         "qrcode",
         "quickcam",
         "ratos",
+        "RCVBUF",
         "rdataclass",
         "rdclass",
         "realpath",
@@ -274,6 +278,8 @@
         "smartpause",
         "Snapmaker",
         "snapshotresizeparams",
+        "SNDBUF",
+        "sockopt",
         "Softwareupdate",
         "somename",
         "sonicpad",
