Fixing a few minor issues that could cause major hangs.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -103,6 +103,7 @@
         "geteuid",
         "getpwnam",
         "getslice",
+        "gifs",
         "Guilouz",
         "hacky",
         "handshakesyn",
@@ -290,6 +291,7 @@
         "standin",
         "Starbound",
         "starport",
+        "streamable",
         "struct",
         "subcode",
         "subed",
